1.0.0: 19 July 2021

* fixed file player finished event triggered by stop()
* no longer close current player when adding to playlist

* added app icon and launch screen
* added waveform display view
* added speed ranges and playback rate quantization
* added mph display units
* added headphone media button and Now Playing control center support
* all control buttons now working
* settings view controls now work

* speed limit and playlist loop now saved to user defaults
* speed view now stylized as speed limit sign
* playlist current song selection now working
* playlist delete all button now select all button
* settings view cancel button now done button
* updated app info
* app info now loaded from txt file

0.1.0: 03 Jul 2021

initial alpha for Nix Wie Raus! opening

* audio engine working
* media pickers implemented
* playlist-based playback
* speed limit control
* app info view