@@ -17,11 +17,15 @@ class PlaylistViewController: UITableViewController {
 	@IBOutlet weak var loopButton: UIBarButtonItem!
 
 	fileprivate var _editSwipe = false
+	fileprivate var _defaultImage: UIImage?
 
 	override func viewDidLoad() {
 		super.viewDidLoad()
 		// Do any additional setup after loading the view.
 
+		_defaultImage = defaultFileImage(for: CGSize(width: 100, height: 100))
+
+		tableView.tableFooterView = UIView(frame: .zero) // no empty rows
 		tableView.allowsMultipleSelectionDuringEditing = true
 		navigationItem.rightBarButtonItems = [editButtonItem, loopButton]
 	}
@@ -127,17 +131,7 @@ class PlaylistViewController: UITableViewController {
 			}
 
 			// image
-			if file.image != nil {
-				cell.imageView?.image = file.image
-			}
-			else {
-				if #available(iOS 13.0, *) {
-					cell.imageView?.image = UIImage(systemName: "music.note")
-				}
-				else {
-					cell.imageView?.image = UIImage(named: "music.note")
-				}
-			}
+			cell.imageView?.image = (file.image != nil ? file.image : _defaultImage)
 		}
 		return cell
 	}
@@ -236,6 +230,24 @@ class PlaylistViewController: UITableViewController {
 			else {
 				loopButton.tintColor = UIColor.systemGray
 			}
+		}
+	}
+
+	// generate default file image, use same size as images generated by picker
+	private func defaultFileImage(for size: CGSize) -> UIImage? {
+		var image: UIImage?
+		if #available(iOS 13.0, *) {
+			image = UIImage(systemName: "doc.fill")
+		}
+		else {
+			image = UIImage(named: "doc.fill")
+		}
+		let renderer = UIGraphicsImageRenderer(size: size)
+		let origin = CGPoint(x: size.width * 0.2, y: size.height * 0.2)
+		let insetSize = CGSize(width: size.width * 0.6, height: size.height * 0.6)
+		return renderer.image { (context) in
+			UIColor.systemGray.set()
+			image?.withRenderingMode(.alwaysTemplate).draw(in: CGRect(origin: origin, size: insetSize))
 		}
 	}
 
