@@ -15,6 +15,8 @@
 * speed view now stylized as speed limit sign
 * playlist current song selection now working
 * playlist delete all button now select all button
+* playlist now shows default icon for files without artwork
+* playlist no longer shows empty rows
 * settings view cancel button now done button
 * updated app info
 * app info now loaded from txt file
